# sfm

./: Cargo.toml
.github/workflows/: release.yml
src/: cli.rs  commands.rs  extension.rs  git.rs  main.rs  user.rs
src/commands/: add.rs  cd.rs  clone.rs  init.rs  status.rs  sync.rs
