[package]
name = "sfm"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ego-tree = "0.11.0"
env_logger = "0.11.10"
ignore = "0.4.26"
log = "0.4.32"
once_cell = "1.21.4"

[profile.release]
opt-level = 2
lto = "thin"
panic = "abort"
strip = true

[profile.ci]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "s"
